force-app/main/default/objects/SingleChargeOverride__c/SingleChargeOverride__c.object-meta.xml
<CustomObject>
    <label>Single Charge Override</label>
    <nameField>
        <label>Single Charge Overrides Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Single Charge Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>