force-app/main/default/objects/SingleChargeOverride__c/fields/baseProductSingleCharge__c.field-meta.xml
<CustomField>
    <fullName>baseProductSingleCharge__c</fullName>
    <label>Base Product Single Charge</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>