force-app/main/default/objects/SingleChargeOverride__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>