force-app/main/default/objects/SingleChargeOverride__c/fields/negotiatedProduct__c.field-meta.xml
<CustomField>
    <fullName>negotiatedProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Negotiated Product</label>
    <referenceTo>NegotiatedProduct__c</referenceTo>
    <relationshipLabel>Single Charge Overrides</relationshipLabel>
    <relationshipName>SingleChargeOverrides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>