force-app/main/default/objects/SingleChargeOverride__c/fields/objectId__c.field-meta.xml
<CustomField>
    <fullName>objectId__c</fullName>
    <externalId>true</externalId>
    <label>Object Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>