force-app/main/default/objects/SingleChargeOverride__c/fields/RT_Single_Charge_Override_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_Single_Charge_Override_ID__c</fullName>
    <label>RT Single Charge Override ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>