force-app/main/default/objects/SingleChargeOverride__c/fields/singleCharge__c.field-meta.xml
<CustomField>
    <fullName>singleCharge__c</fullName>
    <label>Single Charge</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>